# Hardware_Platform_Simulator

./: CMakeLists.txt  Hardware_Platform_Simulator.cpp  Hardware_Platform_Simulator.hpp  README.md  execute.sh  setup.sh
diagram/: hardware_platform.class.violet.html
include/: BUS.hpp  CPU.hpp  DISPLAY.hpp  DataValue.hpp  Hardware_Platform_Simulator.hpp  MEMORY.hpp  PLATFORM.hpp  PROGRAM.hpp  REGISTER.hpp  SystemComponent.hpp
src/: BUS.cpp  CPU.cpp  DISPLAY.cpp  DataValue.cpp  MEMORY.cpp  PLATFORM.cpp  PROGRAM.cpp  REGISTER.cpp  SystemComponent.cpp
testdata/: display.txt  platform.txt
